# climate_experiment

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
climate_analysis/: __init__.py  config.py  sites.py
climate_analysis/analysis/: __init__.py  gev_fit.py  health.py  probabilities.py  risk.py
climate_analysis/data/stations/: QAT_1983-01-01_2021-12-31.parquet  QAT_1990-01-01_2023-12-31.parquet
climate_analysis/data_access/: __init__.py  cmip6.py  esgf_auth.py  esgf_opendap.py  esgf_search.py  stations.py
climate_analysis/processing/: __init__.py  bias.py  tx01.py
climate_analysis/workflows/: __init__.py  site_exceedance.py
climate_tools/: __init__.py  download.py  plot.py
config/: data_catalog.yaml  sites.yaml  thresholds.yaml
data/: .gitkeep
notebooks/: climate_analysis.ipynb  doha_exceedance_walkthrough.ipynb
references/apidly increasing likelihood of exceeding 50 °C in parts of the Mediterranean and the Middle East due to human influence/paper/: s41612-023-00377-4.md  s41612-023-00377-4_meta.json
references/apidly increasing likelihood of exceeding 50 °C in parts of the Mediterranean and the Middle East due to human influence/supplementary material/: 41612_2023_377_MOESM1_ESM.md  41612_2023_377_MOESM1_ESM_meta.json
scripts/: doha_quickstart.py  download_cmip6_bulk.py
